# ensight-reader

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  ensight2obj.py  ensight2vtk.py  ensight_transform.py  ensightreader.py  obj2ensight.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: main.yml  run-tests.yml
data/cavity/: cavity.case  cavity_with_quotes_in_filenames.case  geometry
data/cavity/data/00000000/: U  p  time
data/cavity/data/00000020/: U  p  time
data/cavity/data/00000040/: U  p  time
data/cavity/data/00000060/: U  p  time
data/cavity/data/00000080/: U  p  time
data/cavity/data/00000100/: U  p  time
data/cell_types/: cell_types.case  cell_types.geo
data/dummy_case_file/: dummy_case_file.case  dummy_case_file_with_unmarked_timesets.case  my_transient_constant_in_file.txt  ts3_time_values.txt
data/geometry_shapes/case/: geometry_shapes.case  geometry_shapes.geo  geometry_shapes.object_id
data/sphere/: sphere.0.00000.geo  sphere.0.00000_n.RTData  sphere.case
docs/: requirements.txt
docs/source/: api-reference.rst  changelog.rst  conf.py  design-howto.rst  ensight-transform-cli.rst  index.rst
tests/: test_cavity.py  test_dummy_case_file.py  test_geometry_shapes.py  test_read_geometry.py  test_sphere.py  test_write_geometry.py
