[metadata]
name = ensight-reader
version = 0.9.0
author = Tomas Karabela
author_email = tkarabela@seznam.cz
description = A pure Python reader for the EnSight Gold format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tkarabela/ensight-reader
license = MIT
project_urls =
    Bug Tracker = https://github.com/tkarabela/ensight-reader/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
py_modules =
    ensightreader
    ensight2obj
    ensight2vtk
    ensight_transform
python_requires = >=3.7
install_requires =
    numpy~=1.21

[options.entry_points]
console_scripts =
    ensight2obj = ensight2obj:main
    ensight2vtk = ensight2vtk:main
    ensight_transform = ensight_transform:main

[mypy]
files = ensightreader.py, tests/test_*.py
